example/withacm/sample.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-v1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: echo-server
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo-server
        version: v1
    spec:
      containers:
      - name: echo-server
        image: k8s.gcr.io/echoserver:1.4
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server-v1
#  annotations:
    # Note that the backend talks over HTTP.
#    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    # TODO: Fill in with the ARN of your certificate.
#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: 	arn:aws:acm:ap-south-1:558811456770:certificate/1ec59295-4e77-4a3e-8554-66a621673096
    # Only run SSL on the port named "https" below.
#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
  labels:
    version: v1
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: echo-server
    version: v1
