example/withacm/ingress_alb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-v1-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:558811456770:certificate/1ec59295-4e77-4a3e-8554-66a621673096 
#    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  tls: 
  - hosts:
    - demossl.codesecops.com
  rules:
    - host: demossl.codesecops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server-v1
                port:
                  number: 80
